# vehicle-app-cpp-template

./: .conanremotes  .dockerignore  .gitattributes  .gitignore  .gitmodules  .licensechecker.yml  .ort.yml  .pre-commit-config.yaml  .velocitas-lock.json  .velocitas.json  404.html  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  HOWTO_SETUP_VCAN.md  NOTICE-3RD-PARTY-CONTENT.md  NOTICE.md  README.md  SETUP.md  build.py  build.sh  categories.html  clearlydefined.input  conanfile.py  conanfile.txt  dash.output  dash.output2  dash.output3  dash.output8  documentation.html  gcovr.cfg  index.html  index.xml  install_dependencies.sh  install_deps.py  mock.py  reconfigure_template_urls.sh  reports.html  requirements.in  requirements.txt  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/localversion/: Dockerfile  LOCAL_SETUP.md  README.md  extract-apt-packages.py  local-setup.sh
.devcontainer/scripts/: build-for-target.sh  onCreateCommand.sh  onCreateUserHook.sh  post-create.sh  postCreateCommand.sh  reinstall-cmake.sh  setup-git-access.sh  upgrade-cli.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: app-build-ci.yml  build-docker-image-singlearch.yml  build-docker-image.yml  build-dockerized-app.yml  build-multiarch-image.yml  check-devcontainer.x_yml  check-licenses.yml  ci.yml  (+7 more)
.scripts/: conanfile-merger.py
app/: AppManifest.json  CMakeLists.txt  Dockerfile  feature.config
categories/: index.xml
cmake/: aarch64_to_x86_64.cmake
docs/: DEVELOPMENT.md  SETUP.md
documentation/: index.xml
reports/: code-coverage-results.html  index.xml  test-results.html
tags/: index.xml
utils/: common.sh  delete.sh
(+18 files in other folders)
